--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html>
 <head>
   <title>Portofolio</title>
-
+  <meta charset="ISO-8859-1">
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/base-min.css"> -->
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
- 
 
+  <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
  <!--  Font Awesome Icons -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <!--   Font Fizz Icons -->
-  <link rel="stylesheet" href="font-mfizz.css">
   <!-- Internal Stylesheet -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -22,49 +21,61 @@
 <div class="pure-menu pure-menu-horizontal">
     <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">About Me</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Work</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Skills</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Projects</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Resume</a></li>
     </ul>
 </div>
-<div class="pure-g">
+<div class="pure-g touch">
   <div class="pure-u-1 welcome">
-    <h1>Welcome to my site, my name is Emilie</h1>
+    <h1><span id="welcome"></span></h1>
   </div>
 </div>
-<div class="pure-g">
-  <div class="pure-u-1-2 about-me">
+<div class="pure-g about-me">
+  <div class="pure-u-1-2 ">
+    <div class="box">
     <h2> 
       About Me 
     </h2>
-      <p>Creative Thinker  Problem Solver  Artist  Web Developer </p>
+      <p class="attributes">Creative Thinker  Problem Solver  Artist  Web Developer </p>
       </div>
+    </div>  
       <div class="pure-u-1-2 text-right">
-        <p>
-          Hi, I'm Emilie, a Seattle-based web developer with a not-so-traditional tech background. I strive to create meaningful web applications that are functional, informative, and aesthetically pleasing for the user drawing from my art education and several years of experience in sales and marketing. As a creative thinker and problem solver, I can close the gaps between clients and companies.   
-        </p>
+        <div class="box">
+          <p>
+            Hi, I'm Emilie, a Seattle-based web developer with a not-so-traditional tech background. I strive to create meaningful web applications that are functional, informative, and aesthetically pleasing for the user drawing from my art education and several years of experience in sales and marketing. As a creative thinker and problem solver, I can close the gaps between clients and companies.   
+          </p>
+        </div>  
       </div>
   </div> 
-<div class="pure-g skills">     
-  <div class="pure-u-1-3">
-    <h4>LANGUAGES</h4>
-    <p>CSS3, HTML5, SQL, Ruby, JavaScript</p>
-    <h4>FRAMEWORKS</h4>
-    <p>Rspec, React, Angular, Rails, Express, Node</p>
+<div class="pure-g skills">
+<div class="pure-u-1"><div class="box"><h3>TECHNICAL SKILLS</h3></div></div>     
+  <div class="pure-u-1-3 .skills">
+      <div class="box">
+        <h4>LANGUAGES</h4>
+        <p>CSS3, HTML5, SQL, Ruby, JavaScript</p>
+        <h4>FRAMEWORKS</h4>
+        <p>Rspec, React, Angular, Rails, Express, Node</p>
+      </div>  
   </div>
-  <div class="pure-u-1-3">
-    <h4>LIBRARIES</h4>
-    <p>Bootstrap, Bcrypt, Purecss, jQuery</p>
-    <h4>DATABASES</h4>
-    <p>NoSQL, ActiveRecord, Mongoose, MongoDB, Sequelize, PostgreSQL</p>
+
+  <div class="pure-u-1-3 .skills">
+    <div class="box">
+      <h4>LIBRARIES</h4>
+      <p>Bootstrap, Bcrypt, Purecss, jQuery</p>
+      <h4>DATABASES</h4>
+      <p>NoSQL, ActiveRecord, Mongoose, MongoDB, Sequelize, PostgreSQL</p>
+    </div>  
   </div>
-  <div class="pure-u-1-3">
-    <h4>OTHER</h4>
-    <p>Agile, TDD, JSON, AJAX, Sessions, Authentication, Encryption, RESTful Routing, Heroku, GitHub</p>
+  <div class="pure-u-1-3 .skills">
+    <div class="box">
+      <h4>OTHER</h4>
+      <p>Agile, TDD, JSON, AJAX, Sessions, Authentication, Encryption, RESTful Routing, Heroku, GitHub</p>
+    </div>  
   </div>
-</div>
-<div class="pure-g skills-icons">
-  <div class="pure-u-1"> 
+
+  <div class="pure-u-1 icons"> 
     <i class="devicon-html5-plain"></i>
     <i class="devicon-css3-plain"></i>
     <i class="devicon-javascript-plain"></i>
@@ -82,40 +93,48 @@
   </div>  
 </div>
 
+<div class="pure-g">
+  <div class="pure-u-1">
+  <h3><a href="http://emilieg.github.io/stuck-in-the-mud/">Stuck in the Mud</a></h3> 
+    <p>
+    Stuck in the Mud is a dice game where two players compete for the highest score. They are only able to score points when their roll does not include any twos or fives. 
+    </p>
+    <p>
+    Technology: HTML, CSS, Javascript, jQuery 
+    <a href="https://github.com/emilieg/stuck-in-the-mud"><i class="devicon-github-plain"></i></a>
+  </p>
+  </div>
+</div>  
 
-<h3>Stuck in the Mud</h3> 
-<p>
-(link: http://emilieg.github.io/stuck-in-the-mud/) 
+<div class="pure-g">
+  <div class="pure-u-1">
+    <h3><a href="https://wino911.herokuapp.com/">Wino911</a></h3>
+      <p>
+      Wino911 helps you find a place that serves wine fast. Directions are provided to guide you to the closest destination so you can quench your thirst. If you like the place you can save it to your favorites list. The local temperature display helps you decide whether you should drink red or white.
+      </p>
+      <p>
+      Technology: JavaScript, Node.js, ExpressJS, Postgres, Sequelize
+      APIs: Google Places, Google Directions, Forecast.io
+      <a href="https://github.com/emilieg/Wino911"> <i class="devicon-github-plain"></i></a>
+      </p>
+  </div>
+</div>
 
-Stuck in the Mud is a dice game where two players compete for the highest score. They are only able to score points when their roll does not include any twos or fives. 
-</p>
-<p>
-Technology: HTML, CSS, Javascript, jQuery 
-<i class="devicon-github-plain"></i>(link: https://github.com/emilieg/stuck-in-the-mud)
-</p>
-
-<h3>Wino911</h3>
-<p>
-(link: https://wino911.herokuapp.com/)
-Wino911 helps you find a place that serves wine fast. Directions are provided to guide you to the closest destination so you can quench your thirst. If you like the place you can save it to your favorites list. The local temperature display helps you decide whether you should drink red or white.
-</p>
-<p>
-Technology: JavaScript, Node.js, ExpressJS, Postgres, Sequelize
-APIs: Google Places, Google Directions, Forecast.io
-<i class="devicon-github-plain"></i> (link: https://github.com/emilieg/Wino911)
-</p>
-
-<h3>What's That?</h3>
-
-<p>(link: http://www.hackathon.io/what-s-that2)
-An app that translates scientific ingredient language into simple terms. Users can scan food, cleaning, and personal products by barcode and get more details about the ingredients in the items that they consume. 
-This app was a group collaboration and built at the AngelHack Hackathon Seattle. 
-Team: Michael, Monte, Nate, Emilie and Keidra
-I worked on one of the APIs, AngularJS, user story and presented the product to the judges
-
-Technology: Express, Node.js, AngularJS, Firebase
-<i class="devicon-github-plain"></i> (link:  https://github.com/emilieg/whatsinthis )
-</p>
+<div class="pure-g">
+  <div class="pure-u-1">
+    <h3><a href="http://www.hackathon.io/what-s-that2">What's That?</a></h3>
+    <p>
+    An app that translates scientific ingredient language into simple terms. Users can scan food, cleaning, and personal products by barcode and get more details about the ingredients in the items that they consume. 
+    This app was a group collaboration and built at the AngelHack Hackathon Seattle. 
+    Team: Michael, Monte, Nate, Emilie and Keidra
+    I worked on one of the APIs, AngularJS, user story and presented the product to the judges
+    </p>
+    <p>
+    Technology: Express, Node.js, AngularJS, Firebase
+    <a href="https://github.com/emilieg/whatsinthis"><i class="devicon-github-plain"></i></a>
+    </p>
+</div>
+</div>
 
 <div class="contact-info">
 <h3>Get in touch</h3>
@@ -126,7 +145,8 @@ Resume: <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
 </div>
 
 
-
-<script href="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+<script src="script.js"></script>
+<script src="typed.js-master/js/typed.js"></script>
 </body>
 </html>
