--- a/index.html
+++ b/index.html
@@ -28,33 +28,33 @@
     </ul>
   </div>
   <div id="wrapper">
-  <section class="section" id="welcome" data-anchor="welcome-section">
-    <div class="pure-u-1" id="welcome-box">     
-      <h1><span id="welcome-typer"></span></h1>   
-      <div id="typed-strings">
-        <p>Welcome. <br> <strong> My name is Emilie :) </strong></p>
-        <p>I <3 to build things for the web.</p>
-        <p>Have a look around.</p>
+    <section class="section" id="welcome" data-anchor="welcome-section">
+      <div class="pure-u-1" id="welcome-box">     
+        <h1><span id="welcome-typer"></span></h1>   
+        <div id="typed-strings">
+          <p>Welcome. <br> <strong> My name is Emilie :) </strong></p>
+          <p>I <3 to build things for the web.</p>
+          <p>Have a look around.</p>
+        </div>
       </div>
-    </div>
     </section>
     <section class="section about" data-anchor="about-section">
       <div class="pure-g" id="about-me">
         <div class="pure-u-1-2" >
           <h2 class="h2-about"> 
-            About Me 
+            < About Me />
           </h2>
-          <!--  <p class="attributes">Creative Thinker  Problem Solver  Artist  Web Developer </p> -->
+          <p class="p-about">I am a Seattle-based web developer with a not-so-traditional tech background. In my past lives I've been an Account Manager and a Pilates Instructor.</p>
         </div>
         <div class="pure-u-1-2 text-right">
           <p class="p-about">
-            I am a Seattle-based web developer with a not-so-traditional tech background. I strive to create meaningful web applications that are functional, informative, and aesthetically pleasing for the user drawing from my art education and several years of experience in sales and marketing. As a creative thinker and problem solver, I can close the gaps between clients and companies.
+             I strive to create meaningful web applications that are functional, informative, and aesthetically pleasing for the user drawing from my art education and several years of experience in sales and marketing. As a creative thinker and problem solver, I can close the gaps between clients and companies.
           </p>     
         </div>
       </div>
     </section> 
     <section class="section" data-anchor="skills-section"> 
-      <div class="pure-g">
+      <div class="pure-g" id="skills-list">
         <div class="pure-u-1">
           <h3>TECHNICAL SKILLS</h3>
         </div>     
@@ -75,106 +75,105 @@
           <h4>OTHER</h4>
           <p>Agile, TDD, JSON, AJAX, Sessions, Authentication, Encryption, RESTful Routing, Heroku, GitHub</p>
         </div> 
-        <div class="pure-u-1 icons"> 
-          <i class="devicon-html5-plain"></i>
-          <i class="devicon-css3-plain"></i>
-          <i class="devicon-javascript-plain"></i>
-          <i class="devicon-angularjs-plain"></i>
-          <i class="devicon-jquery-plain"></i> 
-          <i class="devicon-mongodb-plain"></i>
-          <i class="devicon-ruby-plain"></i>
-          <i class="devicon-rails-plain"></i>
-          <i class="devicon-nodejs-plain"></i>
-          <i class="icon-mysql-alt"></i>
-          <i class="devicon-postgresql-plain"></i> 
-          <i class="devicon-heroku-plain"></i>
-          <i class="devicon-github-plain"></i>
-          <i class="devicon-bootstrap-plain"></i>
-        </div> 
       </div>
     </section>
     <section class="section" data-anchor="projects-section">   
       <div class="pure-g" >
         <div class="slide" data-anchor="slide1">
           <div class="pure-u-1-2">
-            <h3><a href="http://www.hackathon.io/what-s-that2">What's That?</a></h3>
+            <h3 class="title">WHAT'S THAT?</h3>
+            <span><a href="http://www.hackathon.io/what-s-that2"><i class="fa fa-globe sm-icon" aria-hidden="true"></a></i></span>
+            <span><a href="https://github.com/emilieg/whatsinthis"><i class="fa fa-code-fork sm-icon" aria-hidden="true"></i></i></a></span>
+            <span><a href="https://youtu.be/1Sst23oGZE8"><i class="fa fa-youtube-play sm-icon" aria-hidden="true"></i></a></span>          
             <p>
-              An app that translates scientific ingredient language into simple terms. Users can scan food, cleaning, and personal products by barcode and get detailed information about the ingredients. 
-              This app was a group collaboration and built at the AngelHack Hackathon Seattle. 
-              Team: Michael, Monte, Nate, Emilie and Keidra
-              I worked on one of the APIs, AngularJS, user story and presentation of the product to the judges.
+              An app that translates scientific ingredient language into simple terms. Scan food, cleaning, and personal products by barcode and get detailed information about the ingredients.
             </p>
+            <p>   
+              <i class="fa fa-users icon-sm" aria-hidden="true"></i>
+              This app was a group collaboration at the AngelHack Hackathon Seattle. We won 2nd place overall as well as the Code for Impact award. 
+            </p>  
             <p>
-              Technology: Swift, Express, Node.js, AngularJS, Firebase
-              <a href="https://youtu.be/1Sst23oGZE8">Demo</a>
-              <a href="https://github.com/emilieg/whatsinthis"><i class="devicon-github-plain"></i></a>
+              Swift, Express<i class="devicon-html5-plain icon"></i><i class="devicon-css3-plain icon"></i><i class="devicon-javascript-plain icon"></i><i class="devicon-nodejs-plain icon"></i><i class="devicon-angularjs-plain icon"></i>Firebase
             </p>
-            </div>
-            <div class="pure-u-1-2">
-            <img src="pictures/iphone-whats-that.png" class="pure-img" alt="image-project">
-            </div>       
+          </div>
+          <div class="pure-u-1-2">
+            <img src="pictures/whats-that-phone.png" class="pure-img" alt="redbull-ingredients" id="redbull-img">
+          </div>       
         </div>
         <div class="pure-g">
           <div class="slide" data-anchor="slide2">
             <div class="pure-u-1-2">
-               <h3><a href="https://wino911.herokuapp.com/">Wino911</a></h3>
-                <p>
-                Wino911 helps you find a place that serves wine fast. Directions are provided to guide you to the closest destination so you can quench your thirst. If you like the place you can save it to your favorites list. The local temperature display helps you decide whether you should drink red or white.
-                </p>
-                <p>
-                Technology: JavaScript, Node.js, ExpressJS, Postgres, Sequelize
-                APIs: Google Places, Google Directions, Forecast.io
-                <a href="https://github.com/emilieg/Wino911"> <i class="devicon-github-plain"></i></a>
-                </p>
-            </div>
-            <div class="pure-u-1-2">
-              <img src="pictures/wino911.png" class="pure-img" alt="image-project">
-            </div>
+             <h3 class="title"> WINO911</h3>
+             <span><a href="https://wino911.herokuapp.com/"> <i class="fa fa-globe sm-icon" aria-hidden="true"></i></a></span>
+             <span><a href="https://github.com/emilieg/Wino911"><i class="fa fa-code-fork sm-icon" aria-hidden="true"></i></a></span>
+             <p>
+              Wino911 provides you with directions to the closest wine bar. A local temperature display helps you decide whether you should drink red or white.
+            </p>
+            <p>
+              <i class="devicon-javascript-plain icon"></i><i class="devicon-nodejs-plain icon"></i> <i class="devicon-postgresql-plain icon"></i> Sequelize, ExpressJS 
+            </p>
+          </div>
+          <div class="pure-u-1-2">
+            <img src="pictures/wino911.png" class="pure-img" alt="image-project">
           </div>
         </div>
-        <div class="pure-g">
-          <div class="slide" data-anchor="slide3">
+      </div>
+      <div class="pure-g">
+        <div class="slide" data-anchor="slide3">
           <div class="pure-u-1-2">
-          <h3><a href="http://cappstone.herokuapp.com/">Cappstone</a></h3> 
-          <p>
-            Cappstone is an app that helps you track all activities related to your job search. Check for upcoming appointments, add contacts, and add notes about meetings. 
-          </p>
-          <p>
-            Technology used: HTML, CSS, Javascript, jQuery, Ruby on Rails 
-            <a href="https://github.com/emilieg/cappstone"><i class="devicon-github-plain"></i></a>
-          </p>
+            <h3 class="title">CAPPSTONE</h3>
+            <span><a href="http://cappstone.herokuapp.com/"><i class="fa fa-globe sm-icon" aria-hidden="true"></i></a></span>
+            <span><a href="https://github.com/emilieg/cappstone"><i class="fa fa-code-fork sm-icon" aria-hidden="true"></i></a></span> 
+            <p>
+              Cappstone is an app that helps you track all activities related to your job search. Check for upcoming appointments, add contacts, and add notes about meetings.               
+            </p>
+            <p>
+              <i class="fa fa-users icon-sm" aria-hidden="true"></i>
+              This app was build in Ruby on Rails as a group initiative with 3 other developers in 4 days. 
+            </p>
+            <p>
+              <i class="devicon-html5-plain icon"></i><i class="devicon-css3-plain icon"></i> <i class="devicon-javascript-plain icon"></i><i class="devicon-jquery-plain icon"></i><i class="devicon-ruby-plain icon"></i><i class="devicon-rails-plain icon"></i>
+            </p>
           </div>
           <div class="pure-u-1-2">
-            <img src="MacScreen-cropped.png" class="pure-img" alt="image-project">
+            <img src="pictures/cappstone.png" class="pure-img" alt="image-project">
           </div>  
         </div>
-        <div class="pure-g">
-          <div class="slide" data-anchor="slide4">
+      </div>
+      <div class="pure-g">
+        <div class="slide" data-anchor="slide4">
           <div class="pure-u-1-2">
-          <h3><a href="http://emilieg.github.io/stuck-in-the-mud/">Stuck in the Mud</a></h3> 
-          <p>
-            Stuck in the Mud is a dice game where two players compete for the highest score. They are only able to score points when their roll does not include any twos or fives. 
-          </p>
-          <p>
-            Technology used: HTML, CSS, Javascript, jQuery 
-            <a href="https://github.com/emilieg/stuck-in-the-mud"><i class="devicon-github-plain"></i></a>
-          </p>
+            <h3 class="title">STUCK IN THE MUD</h3>
+            <span><a href="http://emilieg.github.io/stuck-in-the-mud/"> <i class="fa fa-globe sm-icon" aria-hidden="true"></i></a></span>
+            <span> <a href="https://github.com/emilieg/stuck-in-the-mud"><i class="fa fa-code-fork sm-icon" aria-hidden="true"></i></i></a></span> 
+            <p>
+              Stuck in the Mud is a dice game where two players compete for the highest score. They are only able to score points when their roll does not include any twos or fives. 
+            </p>
+            <p>
+              <!-- technology used -->
+              <i class="devicon-html5-plain icon"></i><i class="devicon-css3-plain icon"></i><i class="devicon-javascript-plain icon"></i><i class="devicon-jquery-plain icon"></i>            
+            </p>
           </div>
           <div class="pure-u-1-2">
             <img src="mud-in-screen.png" class="pure-img" alt="image-project">
+          </div>
           </div>  
         </div>
       </div>
     </section>
     <section class="section" data-anchor="contact-section">
       <div class="pure-g">
-        <div class="pure-u-1">
-          <h3>Get in touch</h3>
-          Email: <i class="fa fa-envelope-o" aria-hidden="true"></i> emiliegerberharris@gmail.com
-          GitHub <i class="devicon-github-plain"></i>
-          LinkedIn <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-          Resume: <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
-        </div> 
+        <div class="pure-u-1-3"></div>
+        <div class="pure-u-1-3">
+          <h1>GET IN TOUCH</h1>
+          <p>
+          Email: <i class="fa fa-envelope-o icon" aria-hidden="true"></i> emiliegerberharris@gmail.com
+          <a href="https://github.com/emilieg" target="_blank"><i class="devicon-github-plain icon"></i></a>
+          <a href="https://www.linkedin.com/in/emiliegerber" target="_blank"><i class="fa fa-linkedin-square icon" aria-hidden="true"></i></a>
+          Resume: <i class="fa fa-file-pdf-o icon" ara-hidden="true"></i>
+          </p>
+        </div>
+        <div class="pure-u-1-3"></div> 
       </div> 
     </section>
   </div>
