--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
         </section>
         <section class="section about" data-anchor="about-section">
             <div class="pure-g" id="about-me">
+                <div class="pure-u-1">
+                    <h2 class="h2-about"> ABOUT ME </h2>
+                </div>
                 <div class="pure-u-1-2">
-                    <h2 class="h2-about">&lt; About Me /&gt;</h2>
+                    <img src="pictures/portrait1.png" class="portrait">
                     <p class="p-about">I am a Seattle-based web developer with
                     a not-so-traditional tech background. In my past lives I've
                     been an Account Manager, a Marketing Coordinator and a
@@ -79,7 +82,7 @@
         <section class="section" data-anchor="skills-section">
             <div class="pure-g" id="skills-list">
                 <div class="pure-u-1">
-                    <h3>TECHNICAL SKILLS</h3>
+                    <h2>TECHNICAL SKILLS</h2>
                 </div>
                 <div class="pure-u-1-3">
                     <h4>LANGUAGES</h4>
@@ -106,9 +109,9 @@
                 <div class="slide" data-anchor="slide1">
                     <div class="pure-u-1">
                         <div class="slide-content">                   
-                            <h1 class="title">PORTOFOLIO</h1>
-                            <p>Feel free to check me out on LinkedIn, Github, GA
-                            Profiles or follow the arrow to check out my
+                            <h2 class="title">PORTOFOLIO</h2>
+                            <p>Feel free to check me out on LinkedIn, <a href="https://github.com/emilieg">Github</a>, <a href="https://profiles.generalassemb.ly/profiles/emilie-gerber">GA
+                            Profiles </a> or follow the arrow to check out my
                             portofolio.</p>
                         </div>
                     </div>
@@ -165,7 +168,7 @@
                         "true" class="fa fa-code-fork sm-icon"></i></a></span>
                         <p>Wino911 provides you with directions to the closest
                         wine bar. A local temperature display helps you decide
-                        whether you should drink red or white. This is a full
+                        whether you should drink red or white. Save your favorite bar to a favorites list. This is a full
                         stack node.js app that features user auth and full CRUD
                         capability.</p>
                         <p><i class=
@@ -238,7 +241,7 @@
             <div class="pure-g">
                 <div class="pure-u-1-3"></div>
                 <div class="pure-u-1-3">
-                    <h1>GET IN TOUCH</h1>
+                    <h2>GET IN TOUCH</h2>
                     <p>Email: <i aria-hidden="true" class=
                     "fa fa-envelope-o icon"></i> emiliegerberharris@gmail.com
                     <a href="https://github.com/emilieg" target="_blank"><i class=
